# C-Compiler

./: CMakeLists.txt  asm_ast.hpp  asmb_ast.hpp  c_ast.hpp  codegen.cpp  codegen.hpp  compiler.cpp  compiler.h  compiler_driver.cpp  language_description.md  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  readme.md  return_2  return_2.i  utils.h
c_code/: return_2  return_2.s
src/: compiler_driver.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/ast/: ast_asmb.hpp  ast_c.hpp  ast_tacky.hpp  general.hpp
src/visitors/: asmb_ast_visitors.hpp  asmb_to_file.hpp  ast_asmb_visitors.hpp  ast_c_visitors.hpp  ast_tacky_visitors.hpp  c_ast_visitors.hpp  c_to_asmb.hpp  c_to_tacky.hpp  code_emission_visitors.hpp  codegen_visitors.hpp  tacky_to_asmb.hpp
src/visitors/asmb_visitors/: asmb_to_file.hpp  printing.hpp
tests/invalid/: grammar.c  ternary_assign.i
tests/valid/: add.c  add2.c  add_func  add_func.c  assignment  assignment.c  bitwise  bitwise.c  bitwise_and  bitwise_and.c  bitwise_and.s  bitwise_or.c  bitwise_shift_precedence  bitwise_shift_precedence.c  bitwise_shiftr_negative  bitwise_shiftr_negative.c  bitwise_xor.c  for_loop_nested.c  hello_world  hidden_then_visible  if_nested_2  if_nested_2.s  increment.c  initializer.c  label_all_statements  label_all_statements.c  lots_of_arguments  lt_true  madd.c  madd2.c  modulo  modulo.c  negation  negation.s  or_short_circuit  parens  precedence_5  precedence_5.s  return_2  return_2.s  (+4 more)
visitors/: asmb_ast_visitors.hpp  c_ast_visitors.hpp  code_emission_visitors.hpp  codegen_visitors.hpp
(+6 files in other folders)
